src/main/metadata/objects/Retail_Campaign_Member__c.object
<CustomObject>
    <description>Retail Campaign Member</description>
    <fields>
        <fullName>Campaign_Dealer__c</fullName>
        <description>Retail Campaign Member: the host dealer of the campaign</description>
        <formula>Retail_Campaign__r.Dealer_Name__r.Name</formula>
        <label>Campaign Dealer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Channel__c</fullName>
        <description>The communication channel with campiagn member</description>
        <label>Communication Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>MMS</fullName>
                </value>
                <value>
                    <fullName>eDM</fullName>
                </value>
                <value>
                    <fullName>DM</fullName>
                </value>
                <value>
                    <fullName>OB CALL</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Retail Campaign Member: the contact this member linked to</description>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Person Account, 3rd Party, Person Account Retail</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Retail Campaign Members</relationshipLabel>
        <relationshipName>Retail_Campaign_Members</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_CAC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From CAC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retail_Campaign__c</fullName>
        <description>Retail Campaign Member: The retail campaign this member linked to</description>
        <label>Retail Campaign</label>
        <referenceTo>Retail_Campaign__c</referenceTo>
        <relationshipLabel>Retail Campaign Members</relationshipLabel>
        <relationshipName>Retail_Campaign_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Campaign Member Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Show up</fullName>
                </value>
                <value>
                    <fullName>Not Show up</fullName>
                </value>
                <value>
                    <fullName>Order Placed</fullName>
                </value>
                <value>
                    <fullName>Converted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Code__c</fullName>
        <description>not shown to user, it's for campaign member de-dup purpose</description>
        <label>Unique Code</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Retail Campaign Member</label>
    <nameField>
        <displayFormat>RCM-{0000}</displayFormat>
        <label>Retail Campaign Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Campaign Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>